Fix: Updated project README