@@ -1,7 +1,55 @@
-# Tic-Tac-Toe-AI-Game
-Java, JavaFX
-As a software developer with a passion for creating engaging user experiences, I recently undertook a project to develop an interactive Tic-Tac-Toe game powered by AI. As the sole developer on the project, I designed and implemented the game from scratch, using advanced algorithms to create a truly challenging and engaging experience for players of all skill levels.
+# Tic Tac Toe Game
 
-My Tic-Tac-Toe game leverages the power of artificial intelligence to provide players with a unique and exciting gaming experience. By incorporating machine learning algorithms, my game is able to adapt to the player's style and level of play, creating a more challenging and personalized gaming experience.
+## Overview
+This project contains two versions of the classic Tic Tac Toe game: a console-based version and a graphical version using JavaFX. The console version allows two players to play Tic Tac Toe in a terminal, while the JavaFX version provides a graphical interface with AI for playing against the computer.
 
-Whether you're a beginner looking to learn the basics of the game or a seasoned player seeking a true challenge, my Tic-Tac-Toe game is sure to provide hours of entertainment. So why not give it a try and see how your skills stack up against the power of AI?
+## Features
+- **Console Version**:
+  - Play Tic Tac Toe in the terminal.
+  - Two-player game without AI.
+  
+- **JavaFX Version**:
+  - Graphical user interface for Tic Tac Toe.
+  - Play against an AI opponent.
+  - Displays winning line on game over.
+
+## Prerequisites
+- JDK 11 or higher.
+- JavaFX SDK (for the JavaFX version).
+
+## Setup and Installation
+1. **JavaFX SDK**: Download the JavaFX SDK from [OpenJFX](https://openjfx.io/) and extract it to a known directory if you plan to run the JavaFX version.
+2. **Clone the Repository**: Use `git clone <repository-url>` to clone this repository to your local machine.
+
+## Running the Applications
+
+### Console Version
+1. Navigate to the directory containing the `TicTacToe.java` file.
+2. Compile the Java file using `javac TicTacToe.java`.
+3. Run the compiled class with `java TicTacToe`.
+4. Follow the on-screen instructions to play the game.
+
+### JavaFX Version
+1. Ensure the JavaFX SDK is correctly set up in your IDE or on your system.
+2. Compile the `TicTacToeFX.java` file, making sure to include the JavaFX libraries in your classpath.
+3. Run the compiled class with the necessary VM options to include the JavaFX modules:
+   ```
+   --module-path "path/to/javafx-sdk/lib" --add-modules javafx.controls,javafx.fxml
+
+4. Follow the graphical interface to play against the AI.
+
+## How to Play
+
+### Console Version
+- Players take turns entering the row and column numbers where they wish to place their mark (X or O).
+- The game ends when one player has three of their marks in a row (horizontally, vertically, or diagonally) or when all squares are filled.
+
+### JavaFX Version
+- Click on the square where you wish to place your mark (X).
+- The AI will make its move (O) after you.
+- The game ends when one player wins or all squares are filled, with the winning line displayed.
+
+## Contributing
+Contributions to enhance the games, add new features, or improve the AI algorithm are welcome. Please fork the repository, make your changes, and submit a pull request with a detailed description of your improvements.
+
+---
